--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,11 +9,42 @@ html,body{
 }
 
 md-content.card-wrapper{
-	background: whitesmoke;
-	padding-top: 75px;
-	padding-bottom: 75px	;
+	/*background*/: whitesmoke;
+	padding: 75px 50px;
 }
 
-.my-card img {
-	max-width: 260px;
+.my-card{
+	padding: 25px;
+	max-width: 960px;
+}
+/*.my-card img {
+	max-height: 350px;
+	max-width: 350px;
+}*/
+.contact-info-wrap{
+	width: 600px;
+}
+
+.contact-info-wrap .material-icons,.contact-info-wrap .fa{
+    position: relative;
+    padding: 15px;
+    margin-right: 15px;
+    font-size: 20px;
+    border-right: solid 1px;
+}
+.contact-info {
+	height: 60px;
+    color: #FF7272;
+    /*background*/: wheat;
+    font-size: 25px;
+    /*border-bottom: solid 1px;*/
+    padding: 5px;
+}
+.contact-info span {
+	padding: 15px;
+}
+
+.fa{
+	font-size: 40px;
+	color: #FF7272;
 }
