Adding font icons

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,11 +10,14 @@
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0-rc2/angular-material.min.css">
-		<link rel="stylesheet" type="text/css" href="./style/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+		<link rel="stylesheet" type="text/css" href="./style/main.css">
 		<title>Git At Me</title>
 	</head>
-	<body ng-controller="indexController as index" ng-cloak>
+	<!-- <body ng-controller="indexController as index" ng-cloak> -->
+	<body ng-cloak>
 
 
 
