--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,14 +2,13 @@ html,body{
 	margin: 0;
 	padding: 0;
 	background: #CEDAE9;
-
 }
 .profile-wrapper{
 	padding: 50px;
 }
 
 md-content.card-wrapper{
-	/*background*/: whitesmoke;
+	background: #79E1FF;
 	padding: 75px 50px;
 }
 
@@ -23,9 +22,10 @@ md-content.card-wrapper{
 }*/
 .contact-info-wrap{
 	width: 600px;
+	/*background: red;*/
 }
 
-.contact-info-wrap .material-icons,.contact-info-wrap .fa{
+.contact-info-wrap .material-icons.info-icons,.contact-info-wrap .fa{
     position: relative;
     padding: 15px;
     margin-right: 15px;
@@ -33,18 +33,32 @@ md-content.card-wrapper{
     border-right: solid 1px;
 }
 .contact-info {
-	height: 60px;
-    color: #FF7272;
-    /*background*/: wheat;
+	/*height: 60px;*/
+    color: #333333;
+    /*background: wheat;*/
     font-size: 25px;
     /*border-bottom: solid 1px;*/
     padding: 5px;
 }
-.contact-info span {
-	padding: 15px;
-}
+
 
 .fa{
 	font-size: 40px;
-	color: #FF7272;
+	color: #333333;
+}
+
+.info-edit{
+	position: relative;
+    padding: 15px;
+    margin-right: 15px;
+    font-size: 20px;
+}
+
+.display-name{
+    color: #333333;
+}
+
+.title-div{
+	border-left: solid;
+	background: red;
 }
