--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-animate.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-aria.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0-rc5/angular-material.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0-rc6/angular-material.min.js"></script>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0-rc2/angular-material.min.css">
@@ -19,7 +19,8 @@
 	<body ng-cloak ng-controller="indexController">
 
 		<div layout="column" class="main-wrap" layout-fill>
-		  <md-toolbar md-scroll-shrink>
+		  <md-toolbar layout="row" md-scroll-shrink>
+		  	<md-button ng-if="isAtHome()" ng-click="redirect('/')">Back</md-button>
 		    <div class="md-toolbar-tools">
 		      <span>Git at Me</span>
 		      <span flex></span>
