--- a/public/views/myProfile.html
+++ b/public/views/myProfile.html
@@ -1,22 +1,26 @@
-<div class="profile-wrapper">
+
+<div>
 	<md-content class="md-padding card-wrapper" layout="column" layout-wrap layout-align="center center">
 
-		<md-card layout="column" class="my-card md-whiteframe-5dp" >
 
-			<md-card-title class="md-padding" flex layout="row" layout-align="start start">
-				<md-card-title-text layout="column">
-					<span class="md-display-2 display-name">{{gamService.me.displayName}}</span>
-					<span class="md-display-1 display-name">Software Developer{{gamService.me.title}}</span>
-				</md-card-title-text>
 
-			</md-card-title>
+
+	
+		<md-card layout-sm="row" layout-md="column" layout-lg="column" class="my-card md-whiteframe-5dp" >
+
 			
 			<md-content layout="row" >
 				<div class="pic-container" flex="50" layout="column" layout-align="center center">
-					<img ng-src="{{gamService.me.avatar}}" class="md-card-image" >
+					<img ng-src="{{gamService.me.avatar}}" class="md-card-image" />
 				</div>
 
 				<div>
+			<md-card-title class="md-padding" flex layout="row" layout-align="start start">
+				<md-card-title-text layout="column">
+					<span class="md-display-2 display-name">Hansel Lopez Daniel </span>
+					<span class="md-display-1 display-name">Software Developer{{gamService.me.title}}</span>
+				</md-card-title-text>
+			</md-card-title>
 					<div class="contact-info-wrap">
 						<div class="contact-info" ng-mouseLeave="editMode($index)"  ng-mouseEnter="editMode($index)" ng-repeat="key in gamService.me.mainList"> 
 							<span class="material-icons info-icons ">{{::iconChooser(key)}}</span>
@@ -29,36 +33,41 @@
 				</div>
 			</md-content>
 
-
-			<md-card-actions layout="row" layout-align="end center">
+			<!-- <md-card-actions layout="row" layout-align="end center">
 				<div class="contact-info" > 
 					<a ng-href="{{gamService.me.profileUrl}}"><span  class="fa fa-github-square"></span> </a>
 				</div>
 				<span flex></span>
 				<md-button>More Info</md-button>
-			</md-card-actions>
+			</md-card-actions> -->
 		</md-card>
-
-		<md-content class="repos">
-			<div ng-repeat="repo in gamService.me.repos">
-			<p>{{repo.name}}</p>
-			<p>{{repo.description}}</p>
-			<p>{{repo.url}}</p>
-			<p>{{repo.updated_at | date}}</p>
-			<p>{{repo.language}}</p>
-			<hr>
-			</div>
-		</md-content>
-
-		<md-content class="followers">
-			<div ng-repeat="follow in gamService.me.followers">
-			<p><a ng-href="#profile/{{follow.login}}">{{follow.login}}</a></p>
-			<img ng-src="{{follow.avatar_url}}" alt="profile pic" style="width: 100px;">
-			<hr>
-			</div>
-		</md-content>
-
-
 
 	</md-content >
 </div>
+<!-- 
+
+		<md-content class="repos">
+			<div ng-repeat="repo in gamService.me.repos">
+				<p>{{repo.name}}</p>
+				<p>{{repo.description}}</p>
+				<p>{{repo.url}}</p>
+				<p>{{repo.updated_at | date}}</p>
+				<p>{{repo.language}}</p>
+				<hr>
+			</div>
+		</md-content> -->
+
+<!-- <md-content class="md-padding">
+    <md-grid-list
+           md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6"
+           md-row-height-gt-md="1:1" md-row-height="1:1"
+           md-gutter="12px" md-gutter-gt-sm="8px" >
+       <md-grid-tile  ng-repeat="follow in gamService.me.followers" 
+           md-rowspan="1" md-colspan="1" md-colspan-sm="1">
+           <img class="tile" ng-src="{{follow.avatar_url}}" />
+         <md-grid-tile-footer layout-align="center center">
+           <h2><a ng-href="#profile/{{follow.login}}">{{ follow.login }}</a></h2>
+         </md-grid-tile-footer>
+       </md-grid-tile>
+    </md-grid-list>
+</md-content> -->
